@@ -1,4 +1,6 @@
 version 0.9.0
+- Start tracking changes in R objects, by adding a single line of code to
+  an existing script.
 - Track changes in data in scripts, using 'run', without the need for '%L>%'
 - Support for multiple loggers; loggers can now support an (automatic) label
   which is used to distinguish output files when multiple datasets are tracked.
